Fix the height of post card and hide overflow text

--- a/myface-ui/src/Components/Grid/Grid.scss
+++ b/myface-ui/src/Components/Grid/Grid.scss
@@ -1,7 +1,10 @@
-﻿.grid {
+﻿@import "../../Styles/constants";
+
+.grid {
   margin: -10px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 18px;
 
   @media screen and (max-width: 440px) {
     display: flex;
