--- a/myface-ui/src/Components/PostCard/PostCard.scss
+++ b/myface-ui/src/Components/PostCard/PostCard.scss
@@ -2,7 +2,9 @@
 
 .post-card {
   position: relative;
+  height: 300px;
   background-color: $color-background-darker;
+  padding: 10px;
   
   .image {
     margin: -10px;
@@ -14,6 +16,11 @@
   
   .message {
     @include bodyFont;
+    margin: -10px;
+    padding: 15px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-height: 100px;
   }
   
   .user {
